# zhushma-test

./: .env-non-dev  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: users.py
app/core/: config.py  logger.py
app/core/db/: __init__.py  session.py
app/core/db/users/: models.py  schemas.py
app/core/services/: users.py
migrations/versions/: 2025-05-07_users_model_00f2e6f39dba.py
