[project]
name = "zhushma-test"
version = "0.1.0"
description = ""
authors = [
    {name = "a.vaits",email = "artur.gips@mail.ru"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "litestar-granian (>=0.12.3,<0.13.0)",
    "litestar-asyncpg (>=0.3.0,<0.4.0)",
    "advanced-alchemy (>=1.4.2,<2.0.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "litestar[standart] (>=2.16.0,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
